// download.proto
syntax = "proto3";

package rpc; // 可以理解为 proto 文件自身的一个命名空间，用在不同 proto 文件之间相互引用的时候（本文用例没用到）

option go_package = "simple/proto/rpc"; // 生成的 go 代码的包导入路径

//下载服务
//请求接受一个DownloadReq
//响应回发多条数据（"true" or "false")
service Download {
    rpc Download (DownloadReq) returns (stream DownloadRes) {
    }
}

message DownloadReq {
    string path = 1;
    int64 offset = 2;
    int64 size = 3;
}

message DownloadRes {
    int64 offset = 1;
    int64 size = 2;
    bytes data = 3;
}