// upload.proto

syntax = "proto3";

package rpc; // 可以理解为 proto 文件自身的一个命名空间，用在不同 proto 文件之间相互引用的时候（本文用例没用到）

option go_package = "test_grpc/proto/rpc"; // 生成的 go 代码的包导入路径

//下载服务
//请求接受一个UploadReq
//响应回发多条数据（"true" or "false")
service Upload {
    rpc Upload (stream UploadReq) returns (UploadRes) {
    }
}

message UploadReq {
    string path = 1; // 文件路径
    int64 offset = 2; // 偏移量
    int64 size = 3; // 大小
    bytes data = 4; // 二进制数据
}

message UploadRes {
    string msg = 1;
}